--- a/spring-mymvc/build.gradle
+++ b/spring-mymvc/build.gradle
@@ -20,4 +20,6 @@ dependencies {
     //这要把这些对应的测试类注释掉即可编译该项目,简单粗暴的方式直接将其test删除
     compile(project(":spring-webmvc"))
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
 }
